--- a/appsettings.json
+++ b/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionString":{
+    "DefaultConnection": "Server=.;Database=clinica;user id=sa;password=Naruto10"
+  }
 }
