--- a/appsettings.json
+++ b/appsettings.json
@@ -5,7 +5,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString":{
-    "DefaultConnection": "Server=.;Database=clinica;user id=sa;password=Naruto10"
+  "ConnectionString": {
+    "DefaultConnection": "Server=.;Database=clinica;Trusted_Connection=False;user id=sa;password=Naruto10"
   }
 }
