--- a/appsettings.json
+++ b/appsettings.json
@@ -5,7 +5,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString": {
-    "DefaultConnection": "Server=.;Database=clinica;Trusted_Connection=False;user id=sa;password=Naruto10"
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=clinica;Trusted_Connection=true;MultipleActiveResultSets=true;user id=sa;password=Naruto10"
   }
 }
