--- a/appsettings.json
+++ b/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433\\Catalog=mssql;Database=prueba;Trusted_Connection=true;Integrated Security=false;MultipleActiveResultSets=true;user id=sa;password=Naruto10"
+    "DefaultConnection": "Server=localhost,1433\\Catalog=mssql;Database=clinica;Trusted_Connection=true;Integrated Security=false;MultipleActiveResultSets=true;user id=sa;password=Naruto10"
   }
 }
