last edits :arrow_up:

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433\\Catalog=mssql;Database=clinica;Trusted_Connection=true;Integrated Security=false;MultipleActiveResultSets=true;user id=sa;password=Naruto10"
+    "DefaultConnection": "Server=tcp:mssqlcli.database.windows.net,1433;Initial Catalog=dbclinica;Persist Security Info=False;User ID=clinica;Password=umg$1818;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
